Correct insufficient spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@ body{
 	color:#666;
 	font-size:150px;
 	left:0;
+	margin:0 0 2vh 0;
 	position:fixed;
 	text-shadow:4px 4px 8px #888;
 	top:0;
